# ascii-video-player

./: CMakeLists.txt  README.md  ascii_player.cpp  ascii_player.hpp  asciiconverter.cpp  asciiconverter.hpp  asciiplayer.cpp  asciiplayer.hpp  main.cpp
src/: ascii_player.cpp  ascii_player.hpp  main.cpp
